--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <form id="sessionForm">
       <label for="artistName">Nome Artístico: *</label>
-      <input type="text" id="artistName" placeholder="Informe seu nome artístico" name="artistName" required>
+      <input type="text" id="artistName" placeholder="Informe seu nome artístico" name="artistName" autofocus required>
 
       <label for="email">E-mail: *</label>
       <input type="email" id="email" placeholder="Informe seu e-mail" name="email" required>
